--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,7 @@
         <ul class="nav__list">
           <li>
             <a href="/blogs/">
-              Posts
+              Blogs
             </a>
           </li>
           <li>
@@ -32,8 +32,8 @@
             </a>
           </li>
           <li>
-            <a href="/contact/">
-              Contact
+            <a href="/radio/">
+              Radio
             </a>
           </li>
           <li>
