--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
               About</h1>
             <div class="[ page-header__summary ] measure-long">
               <p>
-                Hi there. I'm Arman, currently a junior at IIITNR this blog is collection of my rants and 
+                Hi there. I'm Arman, currently a senior at IIITNR this blog is collection of my rants and 
                 programming works that i've done or will do in future. <br>
               </p>
 
@@ -61,10 +61,10 @@
           href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International
         </a>
         <br>
-        <a href="https://github.com/bsach64/loonix.in">Source</a> under MPL-2.0 license
+        <a href="https://github.com/Unic-X/loonix.in">Source</a> under MPL-2.0 license
         </a>
         <br>
-        Site proudly generated using <a href="https://gohugo.io/">HUGO</a>
+        Site generated using <a href="https://gohugo.io/">HUGO</a>
         
       </p>
     {{$script:= resources.Get "js/head.js"| minify}}
