chore: update friedpotato and resume

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
         href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International
       </a>
       <br>
-      <a href="https://github.com/bsach64/loonix.in">Source</a> under MPL-2.0 license
+      <a href="https://github.com/Unic-X/loonix.in">Source</a> under MPL-2.0 license
       </a>
       <br>
       Site proudly generated using <a href="https://gohugo.io/">HUGO</a>
