--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,7 @@
 
     {{ $styles := resources.Get "css/syntax.css" | minify }} 
     <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
-    <title>Loonix | {{.Page.Title}}</title>
+    <title>FriedPotato | {{.Page.Title}}</title>
     {{ $styles := resources.Get "css/head.css" | minify }}
     <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
 
