--- a/layouts/radio/list.html
+++ b/layouts/radio/list.html
@@ -4,7 +4,7 @@
     {{partial "meta"}}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loonix | Radio</title>
+    <title>FriedPotato | Radio</title>
     <link rel="icon" id="favicon" type="image/png" sizes="32x32" href="/loonix5.svg">
     {{ $radioStyles := resources.Get "css/radio.css" | minify }}
     <link rel="stylesheet" href="{{ $radioStyles.Permalink }}" media="screen">
