--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,26 +1,26 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Hey! I'm Arman — I build backend systems, love messing with tech, and share my projects here.">
-<meta name="keywords" content="Arman, Loonix, my projects, backend development, Flutter, Python, JavaScript, systems">
+<meta name="keywords" content="Arman, friedpotato, my projects, backend development, rust, go, Python, JavaScript, systems">
 <meta name="author" content="Arman">
 
 <!-- Open Graph Metadata -->
 <meta property="og:title" content="Hey, I'm Arman | I Build Systems">
 <meta property="og:description" content="This is where I share stuff I've built from backend tools to system projects I’ve enjoyed working on.">
-<meta property="og:image" content="https://loonix.in/loonix.jpg">
+<meta property="og:image" content="https://friedpotato.in/loonix.jpg">
 <meta property="og:image:alt" content="My Portfolio Banner">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://loonix.in">
+<meta property="og:url" content="https://friedpotato.in">
 
 <!-- Twitter Metadata -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Hey, I'm Arman | Backend & Systems Nerd">
 <meta name="twitter:description" content="Come check out the tech things I’m building backend systems, side projects, and whatever I'm tinkering with lately.">
-<meta name="twitter:image" content="https://hugo.loonix.in/loonix.jpg">
+<meta name="twitter:image" content="https://friedpotato.in/loonix.jpg">
 <meta name="twitter:image:alt" content="My Portfolio Banner">
 
 <!-- Favicons -->
-<link rel="icon" href="https://hugo.loonix.in/favicon.ico" type="image/x-icon">
+<link rel="icon" href="https://friedpotato.in/favicon.ico" type="image/x-icon">
 
 <!-- Preload Image -->
-<link rel="preload" href="https://hugo.loonix.in/loonix.jpg" as="image">
+<link rel="preload" href="https://friedpotato.in/loonix.jpg" as="image">
