chore: add a new blog!!

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Hey! I'm Arman — I build backend systems, love messing with tech, and share my projects here.">
-<meta name="keywords" content="Arman, friedpotato, my projects, backend development, rust, go, Python, JavaScript, systems">
+<meta name="keywords" content="Arman, friedpotato, my projects, backend development, rust, go, python, javascript, systems">
 <meta name="author" content="Arman">
 
 <!-- Open Graph Metadata -->
